SERVER-91977 Prevent usage of invalid identifiers in _buildBsonObj(). (#24491)

GitOrigin-RevId: 483b5f4beca8520f00a23ca777102721a589a0a2